# flask-boilerplate

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.github/workflows/: ci.yaml
app/: app.py
app/blueprints/: __init__.py  utils.py
app/blueprints/index/: routes.py
app/blueprints/index/templates/: index.jinja2
app/jinja/: __init__.py  filters.py
app/templates/layouts/: main.jinja2
app/utils/: filesystem.py
conf/: default.py
src/app/: __init__.py  app_logger.py
src/infra/config/: default.py
src/infra/logging/: __init__.py  loguru_logger.py
src/web/: app.py
src/web/blueprints/: __init__.py
src/web/blueprints/index/: routes.py
src/web/controllers/: __init__.py  health.controller.py  health.py  health_controller.py
src/web/jinja/: __init__.py  context_processor.py
src/web/templates/layouts/: main.jinja2
tests/: conftest.py  test_add.py  test_health_route.py
