[tool.poetry]
name = "pyddd"
version = "0.1.0"
description = "Personal boilerplate for FastAPI DDD projects"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
hypercorn = {extras = ["h3"], version = "^0.13.2"}
uvloop = "^0.16.0"
orjson = "^3.8.0"
fastapi = "^0.81.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.2"
pylint = "^2.15.0"
black = "^22.6.0"
isort = "^5.10.1"
pytest-xdist = "^2.5.0"
pytest-sugar = "^0.9.5"
httpx = "^0.23.0"
pytest-asyncio = "^0.19.0"
poethepoet = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "python -m pytest tests"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette", "uvloop"]
